# punchbowl

./: .codespellignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  MANIFEST.in  PUNCH_L1_CR4_20240822182025_v1.fits  PUNCH_L1_CR4_20240903135944_v1.fits  PUNCH_L1_CR4_20240904132042_v1.fits  PUNCH_L1_CR4_20240906155617_v1.fits  PUNCH_L1_CR4_20240909153606_v1.fits  PUNCH_L1_CR4_20240913183827_v1.fits  README.md  Untitled.ipynb  codecov.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-improvement.md
.github/workflows/: binder.yaml  check_changelog_entry.yml  ci.yaml  ci_fixed.yaml  docs.yaml  pr_check_changelog.yml  python-publish.yaml
changelog/: 538.breaking.rst  538.feature.rst  538.trivial.2.rst  538.trivial.rst  546.bugfix.rst  547.bugfix.rst  550.feature.rst  551.bugfix.rst  553.doc.rst  554.breaking.2.rst  554.breaking.rst  554.feature.2.rst  554.feature.rst  556.doc.rst  557.bugfix.rst  558.trivial.rst  559.trivial.rst  560.trivial.rst  562.trivial.rst  563.bugfix.rst  564.trivial.rst  567.feature.rst  568.bugfix.rst  568.feature.rst  569.bugfix.rst  570.feature.rst  571.feature.rst  572.feature.rst  573.breaking.rst  574.bugfix.rst  574.feature.rst  576.feature.rst  577.trivial.rst  580.feature.rst  583.doc.rst  584.feature.rst  585.doc.rst  586.bugfix.rst  590.bugfix.rst  592.feature.rst  (+6 more)
docs/: _config.yml  _toc.yml  conf.py  contributing.md  data-handling.md  getting-data.md  getting-help.md  index.md  index.rst  intro.md  intro.rst  modified-pipeline.md  overview.md  quickstart.md  requirements.txt  running-standard.md  sg_execution_times.rst
docs/auto_examples/: PUNCH-InSitu-Connection.codeobj.json  PUNCH-InSitu-Connection.py.md5  PUNCH-InSitu-Connection.rst  data_guide.codeobj.json  data_guide.ipynb  data_guide.py  data_guide.py.md5  data_guide.rst  data_guide_quickpunch.codeobj.json  data_guide_quickpunch.ipynb  data_guide_quickpunch.py  data_guide_quickpunch.py.md5  data_guide_quickpunch.rst  decoding_data.codeobj.json  decoding_data.py  decoding_data.py.md5  decoding_data.rst  environment_setup.py  environment_setup.py.md5  environment_setup.rst  index.rst  querying_data.codeobj.json  querying_data.ipynb  querying_data.py  querying_data.py.md5  querying_data.rst  sg_execution_times.rst
docs/binder/: requirements.txt
docs/data/: access.rst  data_anomalies.rst  data_codes.rst  data_object.rst  data_overview.rst  data_versions.rst  index.rst  omniheader_select.csv
docs/level0/: level0.md
docs/level1/: alignment.md  chapter1_section1.md  chapter1_section2.md  deficient_pixel.md  despike.md  destreak.md  flagging.md  psf.md  quartic_fit.md  stray_light.md  vignetting.md
docs/level2/: chapter2_section1.md
docs/pipeline/: design.rst  index.rst  overview.rst
docs/pipeline/level1/: deficient_pixel.rst  despike.rst  destreak.rst  pointing.rst  quartic_fit.rst  stray_light.rst
docs/pipeline/level2/: bright_structure.rst  image_merging.rst  image_resample.rst  index.rst  polarization.rst
docs/pipeline/quickPUNCH/: index.rst
docs/source/: conf.py  contribute.rst  help.rst  index.rst  intro.rst
docs/source/data/: access.rst  data_codes.rst  data_object.rst  index.rst  level0.rst  metadata.rst
docs/source/pipeline/: index.rst  overview.rst
examples/: GALLERY_HEADER.rst  PUNCH-InSitu-Connection.py  data_guide_quickpunch.py  decoding_data.py  querying_data.py
notebooks/auto_examples/: PUNCH-InSitu-Connection.ipynb  decoding_data.ipynb  environment_setup.ipynb  pyproject.toml
notebooks/auto_examples/punchbowl/: __init__.py  cli.py  conftest.py  exceptions.py  limits.py
punchbowl/: __init__.py  cli.py  data.py  errors.py  exceptions.py  prefect.py  util.py
punchbowl/data/: Level0.yaml  Level1.yaml  Level2.yaml  Level3.yaml  LevelL.yaml  LevelQ.yaml  __init__.py  history.py  io.py  meta.py  omniheader.csv  punch_io.py  sample.py  spacecraft.yaml  units.py  visualize.py  wcs.py
punchbowl/data/HeaderTemplate/: HeaderTemplate_L0.csv  HeaderTemplate_L1.csv  HeaderTemplate_L2.csv  HeaderTemplate_L2.txt  Level0.yaml  Level1.yaml  Level2.yaml  Level3.yaml  LevelL.yaml  LevelQ.yaml  omnibus.csv  spacecraft.yaml
punchbowl/data/data/: Level0.yaml  Level1.yaml  Level2.yaml  Level3.yaml  LevelH.yaml  LevelL.yaml  LevelQ.yaml  omniheader.csv
punchbowl/data/tests/: Level1.yaml  LevelTest.yaml  example_header.txt  spacecraft.yaml  test_history.py  test_io.py  test_meta.py  test_punch_io.py  test_units.py  test_visualize.py  test_wcs.py  write_test.fits
punchbowl/level0/: ccsds.py  decode.py  decode_sqrt.py  decompress.py  flow.py  sketch.py
punchbowl/level0/tests/: test_ccsds.py  test_decode.py  test_decode_sqrt.py  test_decompress.py  test_flow.py
punchbowl/level1/: alignment.py  deficient_pixel.py  despike.py  destreak.py  flagging.py  flow.py  initial_uncertainty.py  pointing.py  psf.py  quartic_fit.py  schedule.py  sqrt.py  stray_light.py  vignette.py
punchbowl/level1/tests/: test_deficient_pixel.py  test_despike.py  test_destreak.py  test_flagging.py  test_flow.py  test_initial_uncertainty.py  test_quartic_fit.py  test_sqrt.py  test_stray_light.py  (+2 more)
punchbowl/level2/: QuickPUNCH_merge.py  bright_structure.py  flow.py  image_merge.py  merge.py  polarization.py  preprocess.py  quality.py  resample.py
punchbowl/level3/: celestial_intermediary.py  f_corona_model.py  flow.py  flow_velocity.py  low_noise.py  motion_filter.py  polarization.py  starfield.py  starfield_remove.py  stellar.py  velocity.py
punchbowl/levelq/: f_corona_model.py  flow.py  limits.py  pca.py
punchbowl/simulate/: encoding.py  noise.py
punchbowl/tests/: LevelTest.yaml  hdr_test_bad.txt  hdr_test_template.csv  hdr_test_template.tsv  hdr_test_template.txt  omnibus.csv  omniheader.csv  spacecraft.yaml  test_cli.py  test_data.fits  test_data.py  test_header.py  test_util.py  write_test.fits
scripts/: create_test_data.py  flow_track_correl.py  generate_templates.py  speeds_sigmas.fits  validate_templates.py
(+103 files in other folders)
