[build-system]

requires = ["setuptools",
            "wheel"]

[project]
name = "punchbowl"
version = "0.0.1"
dependencies = [
        "numpy",
        "astropy",
        "sunpy",
        "pandas",
        "ndcube",
        "matplotlib",
        "ccsdspy",
        "prefect",
        "regularizepsf",
        "solpolpy",
        "scipy",
        "lmfit",
        "sunkit-image",
        "setuptools",
        "reproject",
        "pylibjpeg",
        "python-dateutil"
]
requires-python = ">=3.9"
authors = [
    {name = "J. Marcus Hughes", email = "marcus.hughes@gmail.com"},
    {name = "Chris Lowder", email = "chris.lowder@swri.org"},
    {name = "Matthew West", email = "matthew.west@swri.org"},
    {name = "Sarak Kovac", email = "sarah.kovac@swri.org"},
    {name = "Ritesh Patel", email = "ritesh.patel@swri.org"},
    {name = "Dan Seaton", email = "daniel.seaton@swri.org"}
]
maintainers = [
  {name = "J. Marcus Hughes", email = "hughes.jmb@gmail.com"}
]
description = "PUNCH science calibration code"
readme = "TODO"
license = {file = "TODO"}
keywords = ["TODO"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
test = ["pytest",
            "coverage",
            "pytest-cov",
            "flake8",
            "pytest-runner",
            "pytest-mpl",
            "pre-commit",
            "ruff",
            "hypothesis"]
docs = ["sphinx",
            "pydata-sphinx-theme",
            "sphinx-autoapi",
            "sphinx-favicon",
            "nbsphinx",
            "ipython",
            "sphinxcontrib-mermaid"]

[project.urls]
#Homepage = "https://example.com"
#Documentation = "https://readthedocs.org"
Repository = "https://github.com/punch-mission/punchbowl.git"
"Bug Tracker" = "https://github.com/punch-mission/punchbowl/issues"
#Changelog = "https://github.com/punch-mission/thuban/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["punchbowl"]

[tool.codespell]
skip = "*.fts,*.fits,venv,*.pro,*.asdf,*.ipynb"

[tool.ruff]
target-version = 'py39'
exclude = ['tests', 'scripts', 'docs']
line-length=120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"*/tests/*" = ['S101']

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_compatibility = "future"
known_first_party = "punchbowl"
length_sort = false
length_sort_sections = "stdlib"
line_length = 120
multi_line_output = 3
no_lines_before = "LOCALFOLDER"
sections = "FUTURE, COMPATIBILITY, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER"

[tool.pytest.ini_options]
markers = [
    "prefect_test: a test that integrates with Prefect",
    "regression: a regression test, likely slow",
]
